src/org/yawlfoundation/yawl/qlever/ffi/qlever_ffi_h.java

// AUTO-GENERATED by jextract from qlever_ffi.h
// If jextract is available: cmake --build yawl-qlever/src/main/native/build --target jextract_bindings
package org.yawlfoundation.yawl.qlever.ffi;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;

/**
 * Layer 1: jextract-generated bindings for qlever_ffi.h
 * Generated package: org.yawlfoundation.yawl.qlever.ffi
 *
 * NOTE: This file was hand-generated as a jextract stub because jextract was
 * not available at build time. When jextract is available, run:
 *   cmake --build yawl-qlever/src/main/native/build --target jextract_bindings
 * to regenerate this file automatically from qlever_ffi.h.
 *
 * Function Signatures (from qlever_ffi.h):
 *   QLeverIndex* qlever_index_create(const char* index_path, QleverStatus* status);
 *   void qlever_index_destroy(QLeverIndex* index);
 *   int qlever_index_is_loaded(const QLeverIndex* index);
 *   size_t qlever_index_triple_count(const QLeverIndex* index, QleverStatus* status);
 *   QLeverResult* qlever_query_exec(QLeverIndex* index, const char* sparql_query, QleverMediaType media_type, QleverStatus* status);
 *   int qlever_result_has_next(const QLeverResult* result);
 *   const char* qlever_result_next(QLeverResult* result, QleverStatus* status);
 *   void qlever_result_destroy(QLeverResult* result);
 *   int qlever_result_has_error(const QLeverResult* result);
 *   const char* qlever_result_error(const QLeverResult* result);
 *   int qlever_result_status(const QLeverResult* result, QleverStatus* status);
 *   int qlever_index_build(const char* input_path, const char* output_path, const char* settings, QleverStatus* status);
 *   void qlever_free_status(QleverStatus* status);
 *   void qlever_free_string(char* string);
 *   void qlever_result_free(QLeverResult* result);
 *   void qlever_index_free(QLeverIndex* index);
 *   char* qlever_media_type_to_mime(QleverMediaType media_type, QleverStatus* status);
 *   int32_t qlever_mime_to_media_type(const char* mime_type, QleverStatus* status);
 */
public final class qlever_ffi_h {
    private static final Linker LINKER = Linker.nativeLinker();
    private static final SymbolLookup STDLIB = SymbolLookup.loaderLookup();

    private qlever_ffi_h() {}

    // ============================================================================
    // Index Lifecycle
    // ============================================================================

    /**
     * QLeverIndex* qlever_index_create(const char* index_path, QleverStatus* status)
     */
    public static final FunctionDescriptor qlever_index_create$FUNC =
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS);

    public static MethodHandle qlever_index_create() {
        return STDLIB.find("qlever_index_create")
            .map(addr -> LINKER.downcallHandle(addr, qlever_index_create$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_index_create not found"));
    }

    /**
     * void qlever_index_destroy(QLeverIndex* index)
     */
    public static final FunctionDescriptor qlever_index_destroy$FUNC =
        FunctionDescriptor.ofVoid(ValueLayout.ADDRESS);

    public static MethodHandle qlever_index_destroy() {
        return STDLIB.find("qlever_index_destroy")
            .map(addr -> LINKER.downcallHandle(addr, qlever_index_destroy$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_index_destroy not found"));
    }

    /**
     * int qlever_index_is_loaded(const QLeverIndex* index)
     */
    public static final FunctionDescriptor qlever_index_is_loaded$FUNC =
        FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS);

    public static MethodHandle qlever_index_is_loaded() {
        return STDLIB.find("qlever_index_is_loaded")
            .map(addr -> LINKER.downcallHandle(addr, qlever_index_is_loaded$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_index_is_loaded not found"));
    }

    /**
     * size_t qlever_index_triple_count(const QLeverIndex* index, QleverStatus* status)
     * Note: size_t is JAVA_LONG on 64-bit platforms
     */
    public static final FunctionDescriptor qlever_index_triple_count$FUNC =
        FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.ADDRESS);

    public static MethodHandle qlever_index_triple_count() {
        return STDLIB.find("qlever_index_triple_count")
            .map(addr -> LINKER.downcallHandle(addr, qlever_index_triple_count$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_index_triple_count not found"));
    }

    // ============================================================================
    // Query Execution
    // ============================================================================

    /**
     * QLeverResult* qlever_query_exec(QLeverIndex* index, const char* sparql_query, QleverMediaType media_type, QleverStatus* status)
     * QleverMediaType is an enum (int)
     */
    public static final FunctionDescriptor qlever_query_exec$FUNC =
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS,
                              ValueLayout.JAVA_INT, ValueLayout.ADDRESS);

    public static MethodHandle qlever_query_exec() {
        return STDLIB.find("qlever_query_exec")
            .map(addr -> LINKER.downcallHandle(addr, qlever_query_exec$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_query_exec not found"));
    }

    // ============================================================================
    // Result Iteration
    // ============================================================================

    /**
     * int qlever_result_has_next(const QLeverResult* result)
     */
    public static final FunctionDescriptor qlever_result_has_next$FUNC =
        FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS);

    public static MethodHandle qlever_result_has_next() {
        return STDLIB.find("qlever_result_has_next")
            .map(addr -> LINKER.downcallHandle(addr, qlever_result_has_next$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_result_has_next not found"));
    }

    /**
     * const char* qlever_result_next(QLeverResult* result, QleverStatus* status)
     */
    public static final FunctionDescriptor qlever_result_next$FUNC =
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS);

    public static MethodHandle qlever_result_next() {
        return STDLIB.find("qlever_result_next")
            .map(addr -> LINKER.downcallHandle(addr, qlever_result_next$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_result_next not found"));
    }

    /**
     * void qlever_result_destroy(QLeverResult* result)
     */
    public static final FunctionDescriptor qlever_result_destroy$FUNC =
        FunctionDescriptor.ofVoid(ValueLayout.ADDRESS);

    public static MethodHandle qlever_result_destroy() {
        return STDLIB.find("qlever_result_destroy")
            .map(addr -> LINKER.downcallHandle(addr, qlever_result_destroy$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_result_destroy not found"));
    }

    // ============================================================================
    // Error Handling
    // ============================================================================

    /**
     * int qlever_result_has_error(const QLeverResult* result)
     */
    public static final FunctionDescriptor qlever_result_has_error$FUNC =
        FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS);

    public static MethodHandle qlever_result_has_error() {
        return STDLIB.find("qlever_result_has_error")
            .map(addr -> LINKER.downcallHandle(addr, qlever_result_has_error$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_result_has_error not found"));
    }

    /**
     * const char* qlever_result_error(const QLeverResult* result)
     */
    public static final FunctionDescriptor qlever_result_error$FUNC =
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS);

    public static MethodHandle qlever_result_error() {
        return STDLIB.find("qlever_result_error")
            .map(addr -> LINKER.downcallHandle(addr, qlever_result_error$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_result_error not found"));
    }

    /**
     * int qlever_result_status(const QLeverResult* result, QleverStatus* status)
     */
    public static final FunctionDescriptor qlever_result_status$FUNC =
        FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS);

    public static MethodHandle qlever_result_status() {
        return STDLIB.find("qlever_result_status")
            .map(addr -> LINKER.downcallHandle(addr, qlever_result_status$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_result_status not found"));
    }

    // ============================================================================
    // Index Building
    // ============================================================================

    /**
     * int qlever_index_build(const char* input_path, const char* output_path, const char* settings, QleverStatus* status)
     */
    public static final FunctionDescriptor qlever_index_build$FUNC =
        FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS,
                              ValueLayout.ADDRESS, ValueLayout.ADDRESS);

    public static MethodHandle qlever_index_build() {
        return STDLIB.find("qlever_index_build")
            .map(addr -> LINKER.downcallHandle(addr, qlever_index_build$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_index_build not found"));
    }

    // ============================================================================
    // Memory Management
    // ============================================================================

    /**
     * void qlever_free_status(QleverStatus* status)
     */
    public static final FunctionDescriptor qlever_free_status$FUNC =
        FunctionDescriptor.ofVoid(ValueLayout.ADDRESS);

    public static MethodHandle qlever_free_status() {
        return STDLIB.find("qlever_free_status")
            .map(addr -> LINKER.downcallHandle(addr, qlever_free_status$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_free_status not found"));
    }

    /**
     * void qlever_free_string(char* string)
     */
    public static final FunctionDescriptor qlever_free_string$FUNC =
        FunctionDescriptor.ofVoid(ValueLayout.ADDRESS);

    public static MethodHandle qlever_free_string() {
        return STDLIB.find("qlever_free_string")
            .map(addr -> LINKER.downcallHandle(addr, qlever_free_string$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_free_string not found"));
    }

    /**
     * void qlever_result_free(QLeverResult* result)
     */
    public static final FunctionDescriptor qlever_result_free$FUNC =
        FunctionDescriptor.ofVoid(ValueLayout.ADDRESS);

    public static MethodHandle qlever_result_free() {
        return STDLIB.find("qlever_result_free")
            .map(addr -> LINKER.downcallHandle(addr, qlever_result_free$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_result_free not found"));
    }

    /**
     * void qlever_index_free(QLeverIndex* index)
     */
    public static final FunctionDescriptor qlever_index_free$FUNC =
        FunctionDescriptor.ofVoid(ValueLayout.ADDRESS);

    public static MethodHandle qlever_index_free() {
        return STDLIB.find("qlever_index_free")
            .map(addr -> LINKER.downcallHandle(addr, qlever_index_free$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_index_free not found"));
    }

    // ============================================================================
    // Media Type Utilities
    // ============================================================================

    /**
     * char* qlever_media_type_to_mime(QleverMediaType media_type, QleverStatus* status)
     */
    public static final FunctionDescriptor qlever_media_type_to_mime$FUNC =
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.ADDRESS);

    public static MethodHandle qlever_media_type_to_mime() {
        return STDLIB.find("qlever_media_type_to_mime")
            .map(addr -> LINKER.downcallHandle(addr, qlever_media_type_to_mime$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_media_type_to_mime not found"));
    }

    /**
     * int32_t qlever_mime_to_media_type(const char* mime_type, QleverStatus* status)
     */
    public static final FunctionDescriptor qlever_mime_to_media_type$FUNC =
        FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS);

    public static MethodHandle qlever_mime_to_media_type() {
        return STDLIB.find("qlever_mime_to_media_type")
            .map(addr -> LINKER.downcallHandle(addr, qlever_mime_to_media_type$FUNC))
            .orElseThrow(() -> new UnsatisfiedLinkError("qlever_mime_to_media_type not found"));
    }
}
